# todo-list-fastapi

./: .gitignore  Dockerfile  README.md  entrypoint.sh  fly.toml  pyproject.toml  security.py
.github/workflows/: pipeline.yaml
fast_course/: app.py
migrations/: env.py
migrations/versions/: 2bfbb0872dcd_create_users_table.py  6bec54f63c4c_nova_migração_usando_postgresql.py  6dd73396eea0_create_todos_table.py  7d9abbe1bca3_add_created_at_updated_at_em_todo.py  997c0b66bd9c_update_table_user.py  9fd5ee7a75ef_.py
models/: todo_state.py  user.py
routers/: auth.py  todos.py  users.py
schemas/: schema_user.py  todo_schema.py
settings/: settings.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todo.py  test_users.py
